--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}      # Docker Hub username (your email/username)
+          password: ${{ secrets.DOCKER_PASSWORD }}      # Docker Hub access token (not Google password)
 
       - name: Build the Docker image
         run: docker build -t your-dockerhub-username/python-httpd-weather .
