--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,11 +15,11 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}      # Docker Hub username (your email/username)
+          username: ${{ secrets.DOCKER_USERNAME }}      # Docker Hub username (artemko79)
           password: ${{ secrets.DOCKER_PASSWORD }}      # Docker Hub access token (not Google password)
 
       - name: Build the Docker image
-        run: docker build -t your-dockerhub-username/python-httpd-weather .
+        run: docker build -t artemko79/python-httpd-weather:latest .
 
       - name: Push the Docker image to Docker Hub
-        run: docker push your-dockerhub-username/python-httpd-weather:latest
+        run: docker push artemko79/python-httpd-weather:latest
